# KnowHow

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml
docs/: CONSOLIDATION.md
docs/lms-salvage/: README.md  content-reviewer.md  curriculum-designer.md  lms-data-model.prisma  project-manager.md  tutor.md  upload-coordinator.md
examples/: run_pipeline.py
knowhow/: __init__.py  config.py  documents.py  embeddings.py  llm.py  loaders.py  pipeline.py
knowhow/graph/: __init__.py  extract.py  retrieve.py  store.py
knowhow/hyde/: __init__.py  generator.py
knowhow/mcp/: __init__.py  __main__.py  server.py
src/: proxy.ts
src/actions/: billing.ts  courses.ts  createBook.ts  enroll.ts  profile.ts  saveReadingState.ts  toggleBookPublic.ts
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/components/: BookActions.tsx  BookManageList.tsx  CommunitySearch.tsx  CourseEditor.tsx  EnrollButton.tsx  LandingHero.tsx  LessonCompleteToggle.tsx  Nav.tsx  NewCourseForm.tsx  PdfReader2D.tsx  PricingCard.tsx  ReaderChrome.tsx  ReaderTocPill.tsx  SettingsForm.tsx  SetupBanner.tsx  Shelf.tsx  ShelfGridFallback.tsx  ShelfSearch.tsx  SubscriptionSection.tsx  UploadDropzone.tsx  VideoEmbed.tsx
src/lib/: billing.ts  books.ts  courses.ts  env.ts  stripe.ts  validation.ts
tests/: test_graph.py  test_hyde.py  test_llm.py  test_loaders.py  test_mcp.py  test_pipeline.py
(+40 files in other folders)
