[project]
name = "knowhow"
version = "0.1.0"
description = "Knowledge Graph RAG with HyDE augmentation"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "faiss-cpu>=1.7",
    "networkx>=3.0",
    "tiktoken>=0.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
